--- a/static/m.html
+++ b/static/m.html
@@ -2,11 +2,12 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=400, initial-scale=0.5">
     <title>Money track</title>
     <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" href="/favicon.ico?v=2" />
     <link rel="stylesheet" href="styles/mobile.css"/>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> <!-- todo:do nto forget to include in manifest -->
 
     <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon/apple-icon-57x57.png?v=2">
     <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/apple-icon-60x60.png?v=2">
@@ -27,7 +28,7 @@
     <meta name="theme-color" content="#ffffff">
 
 
-    <meta name="viewport" content="width = 520, user-scalable=no, initial-scale=1.0"/>
+    <meta name="viewport" content="width = 400, user-scalable=yes, initial-scale=1.0"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
