--- a/static/m.html
+++ b/static/m.html
@@ -7,8 +7,6 @@
     <link rel="shortcut icon" href="/favicon.ico?v=2" />
     <link rel="stylesheet" href="styles/mobile.css"/>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> <!-- todo:do nto forget to include in manifest -->
-
     <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon/apple-icon-57x57.png?v=2">
     <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/apple-icon-60x60.png?v=2">
     <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/apple-icon-72x72.png?v=2">
@@ -28,7 +26,7 @@
     <meta name="theme-color" content="#ffffff">
 
 
-    <meta name="viewport" content="width = 520, user-scalable=yes, initial-scale=1.0"/>
+    <meta name="viewport" content="width = 520, user-scalable=no, initial-scale=1.0"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
